# reget

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .release-please-config.json  .shellcheckrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml  renovate.json
.githooks/: .shellcheckrc  _shared.sh  check-commit-signing.sh  commit-msg
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  pr-title.yml  release.yml
src/reget/: __init__.py  __main__.py  _engine_common.py  _types.py  _version.py  alloc.py  async_engine.py  cli.py  content_range.py  control.py  downloader.py  engine.py  fs.py  headers.py  persist.py  tracker.py
src/reget/transport/: __init__.py  _http_common.py  _requests_like_error_map.py  errors.py  factory.py  httpx_adapter.py  native_session_types.py  niquests_adapter.py  protocols.py  requests_adapter.py  session_input.py  types.py  urllib3_adapter.py
tests/: conftest.py  live_backends.py  test_alloc.py  test_async_engine.py  test_cli.py  test_content_range.py  test_control.py  test_downloader.py  test_engine.py  test_fixture.py  test_fs.py  test_headers.py  test_headers_logic.py  test_httpx_adapter.py  test_live_sha_parity.py  test_live_torture.py  test_native_session_types.py  test_persist.py  test_requests_adapter.py  test_torture.py  test_tracker.py  test_transport_factory.py  test_transport_sha_parity.py  test_transport_types.py  test_types.py  test_urllib3_adapter.py  test_version.py  transport_backends.py
