[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[project]
name = "reget"
version = "0.1.0"
description = "Resumable, cursor-based, CDN-safe HTTP downloads for Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    { name = "reget contributors" },
]
keywords = [
    "http",
    "download",
    "resume",
    "range",
    "partial",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
reget = "reget.__main__:main"

[project.urls]
Homepage = "https://github.com/reget/reget"
Documentation = "https://github.com/reget/reget#readme"
Issues = "https://github.com/reget/reget/issues"
Source = "https://github.com/reget/reget"
Changelog = "https://github.com/reget/reget/blob/main/CHANGELOG.md"

[project.optional-dependencies]
niquests = [
    "niquests>=3.14",
]
requests = [
    "requests>=2.32",
]
httpx = [
    "httpx>=0.27",
]
urllib3 = [
    "urllib3>=2.0",
]

[tool.uv.build-backend]
module-name = "reget"
module-root = "src"
source-include = ["src/reget/py.typed"]
source-exclude = [
    "**/.mypy_cache",
    "**/.ruff_cache",
    "**/.pytest_cache",
    "**/__pycache__",
    "**/*.pyc",
]

[dependency-groups]
# PEP 735 — not published as installable extras; for contributors / CI only.
test = [
    "pytest>=8",
    "pytest-cov>=6",
    "hypothesis>=6",
    "anyio>=4",
    "niquests>=3.14",
    "requests>=2.32",
    "types-requests>=2.33.0.20260408",
    "httpx>=0.27",
    "urllib3>=2.0",
]
lint = [
    "ruff>=0.15",
    "mypy>=1.13,<1.20",
    "pre-commit>=4",
    "pyright>=1.1.400",
]

[tool.uv]
default-groups = ["test", "lint"]
# Resolver cutoff: ignore PyPI uploads newer than this (relative to lock/sync resolve time).
exclude-newer = "48h"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

# markdownlint-cli2 (v0.14.x) reads `.markdownlint-cli2.jsonc` at repo root; keep in sync.
[tool.markdownlint-cli2]
gitignore = true
config = { "line-length" = false, "no-duplicate-header" = true, "first-line-heading" = false, "no-space-in-code" = false, "code-block-style" = false, "no-inline-html" = { "allowed_elements" = ["details", "summary"] } }

[tool.ruff]
line-length = 120
target-version = "py312"
respect-gitignore = true
extend-exclude = ["src.old", "tests.old", "docs.old"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "C4",
    "C90",
    "PIE",
    "T20",
    "BLE",
    "DTZ",
    "PTH",
    "ERA",
    "PL",
    "PERF",
    "FURB",
    "TID",
    "RUF",
]
ignore = [
    "E501",
    "PLC0415",
    "PLR0913",
]
unfixable = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-statements = 50
max-returns = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["reget"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["C901", "D103", "PLR2004", "N802"]
"**/conftest.py" = ["C901", "D103", "N802"]
"scripts/alloc_validation/**" = ["T20", "PLR0915", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = ["src"]
cache_dir = ".mypy_cache"
sqlite_cache = true
incremental = true
enable_error_code = [
    "exhaustive-match",
    "possibly-undefined",
    "truthy-bool",
    "ignore-without-code",
]
exclude = '''(?x)(
    ^\.venv/
    | ^build/
    | ^dist/
    | \.egg-info/
)'''

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = [".venv", "build", "dist", "**/__pycache__"]

# Tests need repo root on the path for ``from tests.…``; relax noisy rules there only.
[[tool.pyright.executionEnvironments]]
root = "src"
extraPaths = ["src"]

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["src", "."]
reportPrivateUsage = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--tb=short --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
#
# Opt-in, machine-readable coverage. Invoke with:
#
#     uv run pytest --cov --cov-report=json --cov-report=term-missing
#
# The JSON report lands at ``.coverage.json`` (format documented at
# https://coverage.readthedocs.io/en/latest/cmd.html#json-reporting).
# Both humans and tools can consume it:
#
#     jq '.totals | {percent_covered, num_statements, missing_lines}' .coverage.json
#     jq '.files | to_entries | map({k: .key, pct: .value.summary.percent_covered}) | sort_by(.pct)' .coverage.json
#
# Branch coverage is on by default — catches "if cond: return" where the
# false branch is never exercised.

[tool.coverage.run]
source = ["src/reget"]
branch = true
parallel = false
data_file = ".coverage"
omit = [
    "src/reget/__init__.py",
    "src/reget/_types.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
precision = 1
sort = "-Cover"
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "^\\s*\\.\\.\\.$",
    "@overload",
    "pragma: no cover",
]

[tool.coverage.json]
output = ".coverage.json"
pretty_print = false
show_contexts = false

[tool.coverage.html]
directory = "htmlcov"
